# spacetraders_rs

./: .env.example  .gitignore  Cargo.toml  benchmarks.txt  deploy.sh  design.md  dev.sh  note.txt  old_schema.sql  run.sh  schema.sql  schema_dump.sh
deploy/: spacetraders_rs.service
src/: agentconfig.rs  api.rs  api_client.rs  client.rs  controller.rs  database.rs  decision_tree.rs  lib.rs  main.rs  main_old.rs  mining.rs  models.rs  ratio_optimiser.rs  runtime.rs  schema.rs  util.rs
src/clients/: api_client.rs  database.rs  mod.rs
src/models/: db_models.rs  mod.rs  models.rs  shipconfig.rs
src/pathfinding/: graph.rs
src/scripts/: autobuy.rs  mining.rs  mod.rs
