[package]
name = "spacetraders_rs"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pathfinding = "4"
log = "0.4"
pretty_env_logger = "0.4"
hyper-tls = "0.5.0"
diesel = { version = "2.1", features = ["postgres", "serde_json"] }
diesel-async = { version = "0.3", features = ["postgres", "deadpool"] }
dotenvy = "0.15"
chrono = "0.4.26"
