[package]
name = "spacetraders_rs"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
hyper = { version = "0.14", features = ["http1", "client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pathfinding = "4"
log = "0.4"
pretty_env_logger = "0.4"
hyper-tls = "0.5.0"
diesel = { version = "2.1", features = ["postgres", "extras"] }
diesel-async = { version = "0.3", features = ["postgres", "deadpool"] }
dotenvy = "0.15"
chrono = { version = "0.4.26", features = ["serde", "clock"] }
graph_builder = "0.3.1"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.9.1"
dashmap = "5.5.0"
futures = "0.3.28"
